--- a/assets/styles/Sass/_form.scss
+++ b/assets/styles/Sass/_form.scss
@@ -18,9 +18,30 @@
     width: 90%;
     position: relative;
 
-    label {
-      color: red;
+    select {
+      background: $form-bg;
+      width: 50%;
+      height: 30px;
       margin-bottom: 10px;
+
+      option {
+        height: 60px;
+        font-weight: bold;
+        font-size: 1.2em;
+
+        &:hover {
+          background: red;
+        }
+      }
+    }
+    label {
+      color: $text-color;
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-bottom: 10px;
+      margin-top: 20px;
     }
 
     label,
@@ -29,10 +50,11 @@
       display: block;
     }
 
-    #model-input {
-      margin-top: 10px;
-      display: none;
+    #basic,
+    #full {
+      display: inline;
     }
+
     .btn {
       margin-top: 20px;
       border: none;
