--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -107,6 +107,17 @@ header h1 {
   font-size: 2.5em;
 }
 
+.error {
+  background: #dd9898;
+  color: #c44e4e;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.1em;
+  padding: 10px;
+  border: 2px solid #c44e4e;
+  margin: 10px;
+}
+
 * {
   margin: 0;
   padding: 0;
