--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,6 +2,8 @@
 @import "Sass/form";
 @import "Sass/header";
 @import "Sass/errorMsg";
+@import "Sass/completeMsg";
+@import "Sass/quotMsg";
 
 * {
   margin: 0;
