--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -118,6 +118,23 @@ header h1 {
   margin: 10px;
 }
 
+.complete {
+  background: #98ddaf;
+  color: #117025;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.1em;
+  padding: 15px;
+  border: 2px solid #117025;
+  margin: 10px;
+}
+
+.quot-msg {
+  color: black;
+  margin: 20px;
+  background: grey;
+}
+
 * {
   margin: 0;
   padding: 0;
