--- a/assets/styles/Sass/_quotMsg.scss
+++ b/assets/styles/Sass/_quotMsg.scss
@@ -1,5 +1,10 @@
 .quot-msg {
   color: black;
-  margin: 20px;
+  margin: 10px auto;
   background: grey;
+  padding: 10px;
+  border-radius: 5px;
+  width: 50%;
+  height: 200px;
+  border: 2px solid black;
 }
