--- a/assets/styles/Sass/_header.scss
+++ b/assets/styles/Sass/_header.scss
@@ -10,5 +10,8 @@ header {
   h1 {
     text-shadow: 1px 1px 3px #000;
     font-size: 2.5em;
+    @media (max-width: 483px) {
+      font-size: 1.6em;
+    }
   }
 }
